[package]
name = "rivals_rwinner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rivals_rwinner"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rivals_rwinner_run"
path = "src/main.rs"


[dependencies]
color-eyre = "0.6.2"
ctor = "0.2.7"
dll-syringe = { version = "0.15.2", features = ["into-x86-from-x64"] }
retour = { version = "0.3.0", features = ["static-detour", "thiscall-abi"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows = { version = "0.54.0", features = [
    "Win32",
    "Win32_System",
    "Win32_System_LibraryLoader",
] }
config = { version = "0.14.0", features = ["ini"], default-features = false }
rust-ini = "0.20.0"
lazy_static = "1.4.0"
